; ModuleID = '/home/carl/AnghaBench/git/extr_archive-tar.c_finish_record.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-tar.c_finish_record.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@offset = common dso_local global i64 0, align 8
@RECORDSIZE = common dso_local global i64 0, align 8
@block = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @finish_record to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @finish_record() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @offset, align 8
  %3 = load i64, i64* @RECORDSIZE, align 8
  %4 = urem i64 %2, %3
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %0
  %8 = load i64, i64* @block, align 8
  %9 = load i64, i64* @offset, align 8
  %10 = add i64 %8, %9
  %11 = load i64, i64* @RECORDSIZE, align 8
  %12 = load i64, i64* %1, align 8
  %13 = sub i64 %11, %12
  %14 = call i32 @memset(i64 %10, i32 0, i64 %13)
  %15 = load i64, i64* @RECORDSIZE, align 8
  %16 = load i64, i64* %1, align 8
  %17 = sub i64 %15, %16
  %18 = load i64, i64* @offset, align 8
  %19 = add i64 %18, %17
  store i64 %19, i64* @offset, align 8
  br label %20

20:                                               ; preds = %7, %0
  %21 = call i32 (...) @write_if_needed()
  ret void
}

declare dso_local i32 @memset(i64, i32, i64) #1

declare dso_local i32 @write_if_needed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
